// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ProgressBus alertPosition="bottom" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus alertPosition="top" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkGrammar=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkGrammar=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkHighlight=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkHighlight=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkSpaces=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus checkSpaces=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus className="my-classname" 1`] = `
<div
  className="uu5-bricks-progress-bus my-classname uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus className="test-classname" 1`] = `
<div
  className="uu5-bricks-progress-bus test-classname uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus content=12345 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus controlled=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus controlled=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus default props 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled=false 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-disabled uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus disabled=true 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-disabled uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus dynamic=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus dynamic=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-progress-bus uu-fulltextsearch-0 uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus fullTextSearchPriority=0 2`] = `
<div
  className="uu5-bricks-progress-bus uu-fulltextsearch-0 uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden=false 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-hidden uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus hidden=true 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-hidden uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus id="myId" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus id="test-id" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus name="myName" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.ProgressBus nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus noPrint=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus noPrint=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position="center" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position="left" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-left uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus position="right" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-right uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus pureRender=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus pureRender=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus selected=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus selected=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-common-selected uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus style={"margin":8} 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus textCorrector=false 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus textCorrector=true 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.ProgressBus verticalPosition="bottom" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-bottomnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBus verticalPosition="top" 1`] = `
<div
  className="uu5-bricks-progress-bus uu5-bricks-progress-bus-center uu5-bricks-progress-bus-topnull"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
